--- a/account/templates/account/password_change_done.html
+++ b/account/templates/account/password_change_done.html
@@ -1,12 +1,13 @@
 {% extends "account/__l_base.html" %}
-{% block title %}Your password has been changed - {{ block.super }}{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Your password has been changed" %} - {{ block.super }}{% endblock %}
 {% block content %}
 <div class="row">
     <div role="main" class="col-sm-8 pr-4">
     <div class="card pr-0 pl-0">
-        <h5 class="card-header">Change your password</h5>
+        <h5 class="card-header">{% trans "Change your password" %}</h5>
         <div class="card-body ml-5 mr-5 mt-4 mb-2">
-            <p>Congratulations! Your password has been changed successfully.</p>
+            <p>{% trans "Congratulations! Your password has been changed successfully." %}</p>
         </div>
     </div>
     </div>
