--- a/account/templates/account/password_reset_failed.html
+++ b/account/templates/account/password_reset_failed.html
@@ -1,11 +1,14 @@
 {% extends "account/__l_base.html" %}
-{% block title %}Reset your password - {{ block.super }}{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Reset your password" %} - {{ block.super }}{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="card col-sm-8 pr-0 pl-0">
-        <h5 class="card-header">Reset your password</h5>
+        <h5 class="card-header">{% trans "Reset your password" %}</h5>
         <div class="card-body ml-5 mr-5 mt-4 mb-2">
-            <p>ReCAPTCHA failed. Are you human? If so, please <a href="{% url 'account:password_reset' %}">go back</a> try again.</a>
+            <p>
+                {% trans "ReCAPTCHA failed. Are you human? If so, please" %} 
+                <a href="{% url 'account:password_reset' %}">{% trans "try again" %}.</a>
         </div>
     </div>
 </div>
