--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -1,17 +1,18 @@
 {% extends "account/__l_base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Edit your profile - {{ block.super }}{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Edit your profile" %} - {{ block.super }}{% endblock %}
 {% block content %}
 <div class="row">
     <div role="main" class="col-sm-8 pr-4">
         <div class="card pr-0 pl-0">
-            <h5 class="card-header">Edit your profile</h5>
+            <h5 class="card-header">{% trans "Edit your profile" %}</h5>
             <div class="card-body ml-5 mr-5 mt-4 mb-2">
                 <form action="." method="post" enctype="multipart/form-data">
                     {{ user_form|crispy }}
                     {{ profile_form|crispy }}
                     {% csrf_token %}
-                    <p><input type="submit" value="Save"></p>
+                    <p><input type="submit" value="{% trans 'Save' %}"></p>
                 </form>
             </div>
         </div>
