--- a/account/templates/account/password_change_form.html
+++ b/account/templates/account/password_change_form.html
@@ -1,16 +1,17 @@
 {% extends "account/__l_base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Change your password - {{ block.super }}{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Change your password" %} - {{ block.super }}{% endblock %}
 {% block content %}
 <div class="row">
     <div role="main" class="col-sm-8 pr-4">
     <div class="card pr-0 pl-0">
-        <h5 class="card-header">Change your password</h5>
+        <h5 class="card-header">{% trans "Change your password" %}</h5>
         <div class="card-body ml-5 mr-5 mt-4 mb-2">
             <form action="." method="POST">
                 {{ form|crispy }}
                 {% csrf_token %}
-                <p><input type="submit" value="Continue"></p>
+                <p><input type="submit" value="{% trans 'Continue' %}"></p>
             </form>
         </div>
     </div>
