--- a/account/templates/account/password_reset_confirm.html
+++ b/account/templates/account/password_reset_confirm.html
@@ -1,19 +1,20 @@
 {% extends "account/__l_base.html" %}
 {% load crispy_forms_tags %}
-{% block title %}Password reset - {{ block.super }}{% endblock %}
+{% load i18n %}
+{% block title %}{% trans "Password reset" %} - {{ block.super }}{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="card col-sm-8 pr-0 pl-0">
-        <h5 class="card-header">Reset your password</h5>
+        <h5 class="card-header">{% trans "Reset your password" %}</h5>
         <div class="card-body ml-5 mr-5 mt-4 mb-2">
             {% if validlink %}
                 <form action="." method="post">
                     {{ form|crispy }}
                     {% csrf_token %}
-                    <p><input type="submit" value="Change my password"></p>
+                    <p><input type="submit" value="{% trans 'Change my password' %}"></p>
                 </form>
             {% else %}
-                <p>The password link was invalid, possible because it has already been used.</p>
+                <p>{% trans "The password link was invalid, possible because it has already been used." %}</p>
             {% endif %}
         </div>
     </div>
