--- a/account/templates/account/password_reset_done.html
+++ b/account/templates/account/password_reset_done.html
@@ -1,11 +1,11 @@
 {% extends "account/__l_base.html" %}
-{% block title %}Reset your password - {{ block.super }}{% endblock %}
+{% block title %}{% trans "Reset your password" %} - {{ block.super }}{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="card col-sm-8 pr-0 pl-0">
-        <h5 class="card-header">Reset your password</h5>
+        <h5 class="card-header">{% trans "Reset your password" %}</h5>
         <div class="card-body ml-5 mr-5 mt-4 mb-2">
-            <p>We've emailed you instructions for setting your password. Please check your inbox or spam folder. If you don't receive an email, please make sure you've entered the address you registered with.</p>
+            <p>{% trans "We've emailed you instructions for setting your password. Please check your inbox or spam folder. If you don't receive an email, please make sure you've entered the address you registered with." %}</p>
         </div>
     </div>
 </div>
