--- a/account/templates/account/password_reset_email.html
+++ b/account/templates/account/password_reset_email.html
@@ -1,5 +1,5 @@
-Someone asked for password reset for email {{email}}. Follow the link below:
+{% trans "Someone asked for password reset for email" %} {{email}}. {% trans "Follow the link below" %}:
 {{ prococol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
 
-Your username, in case you've forgotten:
+{% trans "Your username, in case you've forgotten:" %}
 {{ user.get_username }}
